# E-Com/org/apps/auth-service/src/controllers/auth.controller.ts
@@ -169,3 +169,76 @@ export const getUser = async (req: any, res: Response, next: NextFunction) => {
 next(error)
     }
 }
+
+export const registerSeler = async (req: Request, res: Response, next: NextFunction) => {
+    try {
+        validateRegistrationData(req.body, "seller");
+        const { name, email } = req.body;
+        const existingSeller = await prisma.sellers.findUnique({
+            where: { email }
+        });
+        if (existingSeller) {
+            return next(new ValidationError("Seller already exists!"));
+        }
+        await checkOtpRestrictions(email, next);
+        await trackOtpRequest(email, next);
+        await sendOtp(name, email, "seller-activation-mail");
+        res.status(200).json({
+            message: "OTP sent to email. Please verify your account"
+        });
+    } catch (error) {
+        return next(error);
+
+    }
+}
+
+export const verifySeller = async (req: Request, res: Response, next: NextFunction) => {
+    try {
+        const { email, otp, password, name, phone_number, country } = req.body
+        if (!email || !otp || !password || !name || !phone_number || !country) {
+            return next(new ValidationError("All fields are required!"))
+        }
+        const existingSeller = await prisma.sellers.findUnique({ where: { email } })
+        if (existingSeller) {
+            return next(new ValidationError("Seller already exists with this email!"))
+        }
+        await verifyOtp(email, otp, next)
+        const hashedPassword = await bcrypt.hash(password, 10);
+        await prisma.sellers.create({
+            data: {
+                name,
+                email,
+                password: hashedPassword,
+                country,
+                phone_number
+            }
+        });
+        res.status(201).json({
+            success: true,
+            message: "Seller registered successfully!"
+        });
+    } catch (error) {
+        return next(error)
+    }
+}
+
+export const createShop = async (req: Request, res: Response, next: NextFunction) => {
+    try {
+        const { name, bio, address, opening_hours, website, category, sellerId } = req.body
+        if (!name || !bio || !address || !sellerId || !opening_hours || !category) {
+            return next(new ValidationError("All Fields are required!"))
+        }
+        const shopData:any = {
+            name,
+            bio,address,opening_hours,category,sellerId
+        }
+        if (website && website.trim() !== "") {
+            shopData.website=website
+        }
+        const shop = await prisma.shops.create({ data: shopData })
+        res.status(201).json({success:true, shop})
+    } catch (error) {
+        return next(error)
+    }
+}
+
